--- a/next/templates/sandbox-hpa.yaml
+++ b/next/templates/sandbox-hpa.yaml
@@ -1,1 +1,1 @@
-{{- fail (printf "DEBUG: sandbox is %v" .Values.sandbox) -}}
+{{- fail (printf "DEBUG: sandbox.autoscaling is %v" .Values.sandbox.autoscaling) -}}
