--- a/next/values.yaml
+++ b/next/values.yaml
@@ -91,11 +91,13 @@ seeding:
 # ------------------------------------
 sandbox:
   enabled: true
-  replicaCount: 2 # 冗長化のために2つ推奨
+  replicaCount: 2
   image:
     tagSuffix: "-sandbox"
   service:
-    port: 4000 # サンドボックスアプリが待ち受けるポート
+    port: 4000
+  
+  # ▼ resources ブロック
   resources:
     limits:
       cpu: "500m"
@@ -103,10 +105,15 @@ sandbox:
     requests:
       cpu: "200m"
       memory: "256Mi"
-    autoscaling: # サンドボックス用HPA設定を追加
-      enabled: false
-      minReplicas: 1
-      maxReplicas: 5
-      targetCPUUtilizationPercentage: 80
-    gvisor:
-      enabled: true
+      
+    # ★ ここにあった autoscaling を削除し、下に移動しました
+
+  # ▼ autoscaling ブロック (resourcesと同じ階層にする)
+  autoscaling:
+    enabled: false
+    minReplicas: 1
+    maxReplicas: 5
+    targetCPUUtilizationPercentage: 80
+
+  gvisor:
+    enabled: true
