--- a/next/values.yaml
+++ b/next/values.yaml
@@ -117,3 +117,13 @@ sandbox:
 
   gvisor:
     enabled: true
+
+# ------------------------------------
+# Cloudflared HPA 設定
+# ------------------------------------
+cloudflared:
+  autoscaling:
+    enabled: true
+    minReplicas: 2
+    maxReplicas: 5
+    targetCPUUtilizationPercentage: 75
