イメージプル用pat追加

--- a/next/values.yaml
+++ b/next/values.yaml
@@ -9,6 +9,8 @@ image:
   pullPolicy: Always
   # ★ CIが自動で書き換えるので、ここはダミーや初期値でOK
   tag: "latest"
+imagePullSecrets: 
+  - name: ghcr-secret
 # ------------------------------------
 # アプリケーション設定
 # ------------------------------------
